--- a/html/venta.html
+++ b/html/venta.html
@@ -5,9 +5,8 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Document</title>
-        <link rel="stylesheet" href="../css/estilo.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    </head>
+        <link rel="stylesheet" href="./css/estilo.css">
 
 
     <body>
@@ -641,18 +640,6 @@
 
         </section>
 
-        <section>
-            <div style="text-align: center;" class="noticias mt-3">
-                <H2>Noticias Recientes</H2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae accusamus deserunt obcaecati odio expedita tenetur aliquam deleniti enim culpa natus, veniam nemo.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae accusamus deserunt obcaecati odio expedita tenetur aliquam deleniti enim culpa natus, veniam nemo.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae accusamus deserunt obcaecati odio expedita tenetur aliquam deleniti enim culpa natus, veniam nemo.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae accusamus deserunt obcaecati odio expedita tenetur aliquam deleniti enim culpa natus, veniam nemo.</p>
-
-                <img src="img/baires.jpg" class="img-fluid" alt="Responsive image" "height="300px" width="800px">
-            </div>
-
-        </section>
         <section>
             <div style="text-align: right;" class="mt-2">
                 <a class="navbar-brand" href="#">Subir <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-up-square" viewBox="0 0 16 16">
