--- a/html/venta.html
+++ b/html/venta.html
@@ -403,7 +403,8 @@
                 <div class="col-md-3 mx-auto mb-5">
                     <h6 class="text-uppercase font-weight-bold text-white"> Bienvenidos</h6>
                     <hr class="bg-white mb-4 mt-0 d-inline-block mx-auto" style="width: 110px; height: 3px">
-                    <img src="/img/logo-pilar-recoleta-03.png" alt="foto-buenos-aires" height="125px" width="300px" class="d-inline-block align-text-top">
+                    <img src="../IMG/logo-pilar-recoleta-03.png" alt="logo-pilar-recoleta-03" height="125px" width="300px" class="d-inline-block align-text-top">
+
                 </div>
 
                 <div class="col-md-2 mx-auto mb-4">
