--- a/html/tasaciones.html
+++ b/html/tasaciones.html
@@ -36,8 +36,8 @@
 
 <!----------------------------------MAIN------------------------------->
 <main class="main py-4 formulario">
-
-    <h1 class="title">Tasaciones</h1>
+    
+        <h1 class="title">Tasaciones</h1>
     <p class="subtitle">Para que podamos tasar correctamente su propiedad, por favor complete el siguiente formulario y nos comunicaremos con usted a la brevedad.</p>
 
     <section class="shadow p-3 mb-5 bg-body rounded">
@@ -110,7 +110,7 @@
             <div class="col-md-3 mx-auto mb-5">
                 <h6 class="text-uppercase font-weight-bold text-white"> Bienvenidos</h6>
                 <hr class="bg-white mb-4 mt-0 d-inline-block mx-auto" style="width: 110px; height: 3px">
-                <img src="/img/logo-pilar-recoleta-03.png" alt="foto-buenos-aires" height="125px" width="300px" class="d-inline-block align-text-top">
+                <img src="../IMG/logo-pilar-recoleta-03.png" alt="logo-pilar-recoleta-03" height="125px" width="300px" class="d-inline-block align-text-top">
             </div>
 
             <div class="col-md-2 mx-auto mb-4">
