--- a/index.html
+++ b/index.html
@@ -738,7 +738,7 @@
             <h2>Noticias Recientes</h2>
 
             <div class="clearfix mt-3">
-                <img src="IMG/baires.jpg" class="col-md-6 float-md-end mb-3 ms-md-3 height=" 300px width="800px"
+                <img src="IMG/baires.jpg" class="col-md-6 float-md-end mb-3 ms-md-3 height= 300px width=800px img-fluid"
                      alt="Responsive image">
 
                 <p>
